# mind-the-gap

./: Cargo.toml  README.md  flake.nix  live-system.nix  nixos-test.nix
.github/workflows/: ci.yml
src/: cli.rs  common.rs  lib.rs  main.rs  mnemonic.rs  openpgp.rs  pgp.rs  piv.rs  qr.rs  seed.rs
src/cli/: common.rs  generate.rs  openpgp.rs  piv.rs  status.rs
tests/: argon.rs  cli.rs  completion.rs  mnemonic.rs  openpgp.rs  pgp.rs  seed.rs
